--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
+    "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
-    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
